--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,22 @@
 
 @import "tailwindcss";
 @plugin "daisyui";
+
+.article-swiper .swiper-pagination {
+    bottom: 0px !important;
+}
+
+.article-swiper .swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    background: #00332c; 
+    opacity: 0.3;
+    transition: all 0.3s ease;
+}
+
+.article-swiper .swiper-pagination-bullet-active {
+    width: 35px; 
+    border-radius: 8px;
+    background: #16a34a !important; 
+    opacity: 1;
+}
